rnms/public/css/rnms.css
form#iactions {
    margin: 0px;
    width: auto;
}

div.action_buttons {
    float: left;
}
div.action_buttons a {
    margin-left: 2px;
    margin-right: 2px;
}
#eventtable {
    border-collapse: collapse;
    width: 100%;
	font-family	Verdana,Arial,sans-serif;
	font-size	11px;
	font-weight	400;
	color	#222222;
	text-transform	none;
	text-decoration	none;
	border: 1px solid #aaaaaa;
}

#tableheader {
    background-color: #cccccc;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom: 1px solid black;
    border-top: 1px solid black;
    color: black;
    font-weight: bold;
    height: 20px;
    text-align: center;
	color: #555555;
}

#eventtable tr {
    border-bottom: 1px dashed #AAAAAA;
    white-space: nowrap;
	padding: 0px;
	margin: 0px;
}
#eventtable td {
   padding: 5px 0px 5px 0px;
}

/* Pagination functions */
/*
span.table_controls {
  border-top: 1px solid #333333;
  border-bottom: 1px solid #333333;
  border-left: none;
  border-right: none;
  background-color: #cccccc;
  padding: 10px 0px 10px 0px;
  width: 100%;
  text-align: right;
  float: right;
}

a.prevPage, a.nextPage, a.pager_link, span.pager_curpage {
  border: 1px solid #333333;
  padding: 5px;
  margin-right: 5px;
  background-color: #ffffff;
  color: #6666ff;
  text-decoration: none;
}

span.pager_curpage {
  background-color: #eea117;
  color: #ffffff;
}

span.pager_dotdot {
  background-color: inherit;
  color: #000000;
  border: none;
}
i
span#span_control {
  color: #000000;
  pnosition: absolute;
  margin: -5px;
  padding: 5px;
  left: 20%;
}

*/
/* Statistics table */
.statrow { clear: left; padding: 6px; }
.statrow label { float: left; width: 10em; }
.statrow .field { display: block; margin-left: 10em; }

.infobox {
	border-radius: 4px 4px 4px 4px;
	min-height: 50px;
	margin-bottom: 10px;
}
.infobox > h2 {
    font-family: Verdana,Arial,sans-serif;
    font-size: 14px;
    font-weight: bold;
    padding-left: 10px;
    line-height: 24px;
    margin: 2px;
    border-radius: 4px 4px 4px 4px;
}

.infobox > dl > dt {
    line-height: 22px;
}
.infobox > dl > dd {
    line-height: 22px;
}

/* Used for color-coding the Attribute status */
.status-up { color: #468847; }
.status-alert { color: #f89406; }
.status-down { color: #b94a48; }
.status-admin-down { color: #999999; }
.status-testing { color: #3887ad; }
.status-unknown { color: #222222; }

.event_type_td {
    text-align: center;
    border-radius: 2px;
    margin: 1px;
}

.statusbar {
	border-radius: 4px 4px 4px 4px;
	min-height: 50px;
	margin-bottom: 10px;
    }

.statusbar div {
    float: left;
    margin-left: 20px;
}

td.columns > select,
td.operators > select {
    width: 100px;
}

footer a {
    color: rgba(128,128,128,0.5);
}

